// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/TemplatesList creates a form for the 'Import' special item 1`] = `
<div
  className="mdc-layout-grid"
>
  <div
    className="mdc-layout-grid__inner"
  >
    <div
      className="mdl-shadow--2dp selectedListItem mdc-layout-grid__cell mdc-layout-grid__cell--span-2"
      style={
        Object {
          "height": "168px",
        }
      }
    >
      <div
        onClick={[Function]}
        role="presentation"
        style={
          Object {
            "textDecoration": "none",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "color": "#666",
              "fontSize": "16px",
              "fontWeight": "400",
              "height": "87%",
              "lineHeight": "1.1",
              "padding": "16px",
            }
          }
        >
          <div
            style={
              Object {
                "display": "table-row",
                "textAlign": "center",
                "width": "100%",
              }
            }
          >
            Import
          </div>
          <div
            style={
              Object {
                "display": "table-row",
                "textAlign": "center",
                "width": "100%",
              }
            }
          >
            <form
              style={
                Object {
                  "width": "100%",
                }
              }
            >
              <div
                className="fileInput"
              >
                <i
                  className="material-icons"
                >
                  cloud_upload
                </i>
                <input
                  accept={null}
                  onChange={[Function]}
                  type="file"
                />
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/TemplatesList marks an item as selected 1`] = `
<div
  className="mdc-layout-grid"
>
  <div
    className="mdc-layout-grid__inner"
  >
    <div
      className="mdl-shadow--2dp selectableListItem mdc-layout-grid__cell mdc-layout-grid__cell--span-2"
      style={
        Object {
          "height": "168px",
        }
      }
    >
      <div
        onClick={[Function]}
        role="presentation"
        style={
          Object {
            "textDecoration": "none",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "color": "#666",
              "fontSize": "16px",
              "fontWeight": "400",
              "height": "87%",
              "lineHeight": "1.1",
              "padding": "16px",
            }
          }
        >
          <div
            style={
              Object {
                "display": "table-row",
                "textAlign": "center",
                "width": "100%",
              }
            }
          >
            template 1
          </div>
          <div
            style={
              Object {
                "display": "table-row",
                "textAlign": "center",
                "width": "100%",
              }
            }
          >
            <img
              alt="template 1"
              src="./images/robots/robot-0.svg"
              style={
                Object {
                  "margin": "30px",
                  "width": "40%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="mdl-shadow--2dp selectedListItem mdc-layout-grid__cell mdc-layout-grid__cell--span-2"
      style={
        Object {
          "height": "168px",
        }
      }
    >
      <div
        onClick={[Function]}
        role="presentation"
        style={
          Object {
            "textDecoration": "none",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "color": "#666",
              "fontSize": "16px",
              "fontWeight": "400",
              "height": "87%",
              "lineHeight": "1.1",
              "padding": "16px",
            }
          }
        >
          <div
            style={
              Object {
                "display": "table-row",
                "textAlign": "center",
                "width": "100%",
              }
            }
          >
            template 2
          </div>
          <div
            style={
              Object {
                "display": "table-row",
                "textAlign": "center",
                "width": "100%",
              }
            }
          >
            <img
              alt="template 2"
              src="./images/robots/robot-1.svg"
              style={
                Object {
                  "margin": "30px",
                  "width": "40%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/TemplatesList renders correctly 1`] = `
<div
  className="mdc-layout-grid"
>
  <div
    className="mdc-layout-grid__inner"
  />
</div>
`;

exports[`components/TemplatesList renders some items 1`] = `
<div
  className="mdc-layout-grid"
>
  <div
    className="mdc-layout-grid__inner"
  >
    <div
      className="mdl-shadow--2dp selectedListItem mdc-layout-grid__cell mdc-layout-grid__cell--span-2"
      style={
        Object {
          "height": "168px",
        }
      }
    >
      <div
        onClick={[Function]}
        role="presentation"
        style={
          Object {
            "textDecoration": "none",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "color": "#666",
              "fontSize": "16px",
              "fontWeight": "400",
              "height": "87%",
              "lineHeight": "1.1",
              "padding": "16px",
            }
          }
        >
          <div
            style={
              Object {
                "display": "table-row",
                "textAlign": "center",
                "width": "100%",
              }
            }
          >
            template 1
          </div>
          <div
            style={
              Object {
                "display": "table-row",
                "textAlign": "center",
                "width": "100%",
              }
            }
          >
            <img
              alt="template 1"
              src="./images/robots/robot-0.svg"
              style={
                Object {
                  "margin": "30px",
                  "width": "40%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/TemplatesList renders without selected template 1`] = `
<div
  className="mdc-layout-grid"
>
  <div
    className="mdc-layout-grid__inner"
  >
    <div
      className="mdl-shadow--2dp selectableListItem mdc-layout-grid__cell mdc-layout-grid__cell--span-2"
      style={
        Object {
          "height": "168px",
        }
      }
    >
      <div
        onClick={[Function]}
        role="presentation"
        style={
          Object {
            "textDecoration": "none",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "color": "#666",
              "fontSize": "16px",
              "fontWeight": "400",
              "height": "87%",
              "lineHeight": "1.1",
              "padding": "16px",
            }
          }
        >
          <div
            style={
              Object {
                "display": "table-row",
                "textAlign": "center",
                "width": "100%",
              }
            }
          >
            Template 1
          </div>
          <div
            style={
              Object {
                "display": "table-row",
                "textAlign": "center",
                "width": "100%",
              }
            }
          >
            <img
              alt="Template 1"
              src="./images/robots/robot-0.svg"
              style={
                Object {
                  "margin": "30px",
                  "width": "40%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="mdl-shadow--2dp selectableListItem mdc-layout-grid__cell mdc-layout-grid__cell--span-2"
      style={
        Object {
          "height": "168px",
        }
      }
    >
      <div
        onClick={[Function]}
        role="presentation"
        style={
          Object {
            "textDecoration": "none",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "color": "#666",
              "fontSize": "16px",
              "fontWeight": "400",
              "height": "87%",
              "lineHeight": "1.1",
              "padding": "16px",
            }
          }
        >
          <div
            style={
              Object {
                "display": "table-row",
                "textAlign": "center",
                "width": "100%",
              }
            }
          >
            Template 2
          </div>
          <div
            style={
              Object {
                "display": "table-row",
                "textAlign": "center",
                "width": "100%",
              }
            }
          >
            <img
              alt="Template 2"
              src="./images/robots/robot-1.svg"
              style={
                Object {
                  "margin": "30px",
                  "width": "40%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
